@@ -135,11 +135,6 @@ class MainWindow : public QMainWindow
 		//! red), -1 if there is no such consensus.
 		int getSelectedColor();
 
-		//! \returns the uniform selected type (i.e. \c OBJ_Line if everything
-		//! selected is a line), \c OBJ_Unknown if there is no such
-		//! consensus.
-		LDObjectType getUniformSelectedType();
-
 		//! Automatically scrolls the object list so that it points to the first
 		//! selected object.
 		void scrollToSelection();
